Fixed OverFlow X Bug

--- a/Assembly_EngGame/CSS/main.css
+++ b/Assembly_EngGame/CSS/main.css
@@ -10,7 +10,6 @@ body {
     height: 100vh;
 }
 main {
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -169,4 +168,5 @@ section.randomWord span {
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: 0;
+
 }
